# just_wordle

./: .gitignore  README.md  data_prep.py  main.py  pyproject.toml  settings.json
data/: solutions_5.txt  solutions_6.txt  solutions_7.txt
src/: config.py  constants.py  data_manager.py  data_prep.py  engine.py  logic.py  main.py  ui.py  utils.py
src/just_wordle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_data_manager.py  test_logic.py
