[project]
name = "just-wordle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "readchar>=4.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
wordle = "src.main:main"
setup = "src.data_prep:build_data"

[tool.uv]
package = true
